Fix in-jvm dtest java 11 compatibility
Patch by Blake Eggleston; Reviewed by Alex Petrov and David Capwell for CASSANDRA-15463